Correct loader animation alignment
Correct loader animation alignment

--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -141,7 +141,7 @@
     top: 50%;
     left: 50%;
     gap: 40px;
-    transform: translate(-50%, -50%);
+    transform: translate(-57%, -50%);
     width: 268px;
     height: 144px;
   }
