--- a/scss/style.css
+++ b/scss/style.css
@@ -540,7 +540,7 @@ footer a {
   top: 50%;
   left: 50%;
   gap: 40px;
-  transform: translate(-50%, -50%);
+  transform: translate(-57%, -50%);
   width: 268px;
   height: 144px;
 }
